Dancer 1.1902 (1.2RC2)

    [ Alexis Sukrieh ]
    * Better design for the scaffolded app (logo, favicon and background image
      added)
    * Environment info available on scaffolded app 
    * LWP is used by the dancer helper to download files
    * jQuery 1.4.2 (minified) is included in the scaffolded app
    * default layout uses <% request.base %> in order to support mounted apps
      (Thanks to Naveed Massjouni and Franck Cuny for the concept/idea).
    * The main.tt layout sources jQuery first from Google CDN and falls back to the 
      local minified version if on offline mode.
    * New default token provided to the "template" helper: dancer_version
    
    [ Sebastian de Castelberg ]
    * The dancer helper is able to download files via a transparent proxy
      (thanks to LWP).

    [ Adam J. Foxson ]
    * FIX for issue GH#136: 
      "readline() on closed filehandle DATA" error that appears when running
      the app with Starman
    
    [ Naveed Massjouni ]
    * Dancer::Test function get_response is renamed to dancer_response
      get_response still works but is deprecated

    [ Franck Cuny ]
    * FIX for issue GH#129 
      don't add multiple content-type to headers
    * fix broken tests (they were testing incorrect content type)

    [ Damien Krotkine ]
    * FIX for issue GH#115
      documentation about compression in Dancer::Deployment 

Dancer 1.1901 (1.2RC1)

    [ Franck Cuny ]
    * implemented GH#120:
      - methods {to,from}_{xml,json,yaml} accept more than one arguments. The
        first argument is the data to transform. All the remainings arguments
        are parameters to alter the behavior of the serializers. Refer to the
        documentation for more informations.
    * more tests added

    [ Alexis Sukrieh ]
    * load_plugin is DEPRECATED; 'use' should be used instead to load a plugin.
      This is fixes the major issue with plugins about symbol exports that
      didn't work well (issue #101).